# Empathy-Engine

./: README.md  pyproject.toml  pyvenv.cfg  requirements.txt
src/empathy_engine/: cli.py  emotion.py  mapping.py  test_run_emotion.py  test_run_mapping.py  test_run_tts.py  tts.py
src/empathy_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
